clusters/homelab/namespaces/web-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openwebui
  name: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: ghcr.io/open-webui/open-webui:main-slim
        name: open-webui
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 5
        resources:
          requests:
            memory: 1Gi
          limits:
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - name: data
          mountPath: /app/backend/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: openwebui-data
