clusters/homelab/namespaces/web-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  annotations:
    tailscale.com/proxy-group: ts-ingress
spec:
  defaultBackend:
    service:
      name: openwebui
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - openwebui
